<resources>
    <string name="inicioTitulo">Início</string>
    <string name="extraTitulo">Extras</string>
    <string name="sincronizarTitulo">Sincronizar</string>
    <string name="sincronizarSubTitulo">Clientes, pedidos, catálogo</string>
    <string name="avisosTitulo">Avisos</string>
    <string name="avisosNaoLidos">NÃO LIDOS</string>
    <string name="avisosLidos">LIDOS</string>
    <string name="avisosSubTitulo">Mensagens, dicas, novidades</string>
    <string name="clientesTitulo">Clientes</string>
    <string name="clientesSubTitulo">Lista de clientes</string>
    <string name="produtosTitulo">Produtos</string>
    <string name="produtosSubTitulo">Lista de produtos</string>
    <string name="pedidosTitulo">Pedidos</string>
    <string name="pedidosSubTitulo">Pedidos enviados/enviar</string>
    <string name="retornoTitulo">Retotno</string>
    <string name="retornoSubTitulo">Situação dos pedidos enviados</string>
    <string name="titulosTitulo">Títulos</string>
    <string name="titulosSubTitulo">Títulos vencidos/vencer</string>
    <string name="rotaTitulo">Rota</string>
    <string name="rotaSubTitulo">Agenda de visitas</string>
    <string name="vendedoresTitulo">Vendedores</string>
    <string name="vendedoresSubTitulo">Lista de vendedores</string>
    <string name="relatoriosTitulo">Relatórios</string>
    <string name="relatoriosSubTitulo">Dados e estatísticas</string>
    <string name="rankingTitulo">Ranking</string>
    <string name="rankingProdutos">Ranking de Produtos</string>
    <string name="rankingClientes">Ranking de Clientes</string>
    <string name="clientesSemCompra">Clientes sem Compras</string>
    <string name="premiacoes">Premiações</string>
    <string name="sistemaTitulo">Sistema</string>
    <string name="sistemaSubTitulo">Trocar usuário, exportar</string>
    <string name="redefinirTitulo">Redefinir</string>
    <string name="tabSinronizarEnviar">ENVIAR</string>
    <string name="tabSinronizarReceber">RECEBER</string>
    <string name="tabClientesCNPJ">CNPJ</string>
    <string name="tabClientesCPF">CPF</string>
    <string name="tabClientesDetalhesCadastro">CADASTRO</string>
    <string name="tabClientesDetalhesFinanceiro">FINANCEIRO</string>
    <string name="tabClientesDetalhesTitulos">TÍTULOS</string>
    <string name="tabClientesDetalhesPedidos">PEDIDOS</string>
    <string name="tabProdutosLista">Lista</string>
    <string name="tabProdutosCatalogo">Catálogo</string>
    <string name="tabPedidosEnviar">ENVIAR</string>
    <string name="tabPedidosEnviados">ENVIADOS</string>
    <string name="tabRetornoPendente">PENDENTE</string>
    <string name="tabRetornoFaturado">FATURADO</string>
    <string name="tabRetornoEmRota">EM ROTA</string>
    <string name="tabRetornoEntregue">ENTREGUE</string>
    <string name="tabRetornoCancelado">CANCELADO</string>
    <string name="tabSistemaSobre">SOBRE</string>
    <string name="tabSistemaAjuda">AJUDA</string>
    <string name="tabSistemaLog">LOG</string>
    <string name="tabTitulosVencer">À VENCER</string>
    <string name="tabTitulosVencido">VENCIDOS</string>
    <string name="tabRankingCliente">POR CLIENTE</string>
    <string name="tabRankingGrupo">POR GRUPO</string>
    <string name="placeholderText">XXXX XXXX</string>
    <string name="placeholderLetter">X</string>
    <string name="placeholderDate">xx/xx/xxxx</string>
    <string name="placeholderTime">xx:xx</string>
    <string name="placeholderFabricante"><b>Fabricante: </b></string>
    <string name="placeholderModelo"><b>Modelo: </b></string>
    <string name="placeholderVersao"><b>Versao/SDK: </b></string>
    <string name="placeholderAtividade"><b>Atividade: </b></string>
    <string name="placeholderClasse"><b>Classe/Método: </b></string>
    <string name="placeholderLinha"><b>Linha: </b></string>
    <string name="placeholderDetalhe"><b>Detalhe: </b></string>
    <string name="placeholderHashtag">#</string>
    <string name="appCompany">SoftHex</string>
    <string name="appName">Sonic</string>
    <string name="app_name">Sonic</string>
    <string name="pBy">powered by</string>
    <string name="appVerify">Verificaremos se o código digitado encontra-se em nossa base de dados.</string>
    <string name="appConfirm">Confirme se esses são seus dados, caso contrário contate na sua empresa o responsável pela administração do sistema.</string>
    <string name="msgPerms">Permissões necessárias...</string>
    <string name="btProximo">PRÓXIMO</string>
    <string name="btIniciar">INICIAR</string>
    <string name="btPular">PULAR</string>
    <string name="btVoltar">VOLTAR</string>
    <string name="userAdmin">Você está vendo essa opção porque é um usuário admin. Caso não seja, contate o administrador da sua empresa.</string>
    <string name="headerDefault">::: Aviso :::</string>
    <string name="headerSuccess">Tudo certo!</string>
    <string name="headerInfo">::: Aviso :::</string>
    <string name="headerWarning">::: Atenção :::</string>
    <string name="headerWrong">::: Erro :::</string>
    <string name="gravandoDados">Gravando na tabela</string>
    <string name="dadosSincronizados">Dados sincronizados com sucesso.</string>
    <string name="estoqueSincronizado">Estoque sincronizado com sucesso.</string>
    <string name="imagesSaved">Imagens salvas com sucesso.</string>
    <string name="catalogoSaved">Catálogo salvo com sucesso.</string>
    <string name="databaseBackupSaved">Backup salvo com sucesso.</string>
    <string name="imageZipFail">Erro ao tentar extrair o arquivo. Contate na sua empresa o responsável pela administração do sistema.</string>
    <string name="fileNotFound">O arquivo solicitado não foi encontrado. Contate na sua empresa o responsável pela administração do sistema.</string>
    <string name="fileDownloadedNotFound">O arquivo solicitado foi baixado mas não foi encontrado no dispositivo. Contate na sua empresa o responsável pela administração do sistema.</string>
    <string name="deviceUnknow">Seu aparelho não esta cadastrado para a empresa (</string>
    <string name="deviceImei1">). Verifique se o imei (</string>
    <string name="deviceImei2">) foi cadastrado corretamente pelo administrador.</string>
    <string name="failToConnect">Não foi possível conectar ao servidor no momento. Tente novamente em alguns minutos.</string>
    <string name="formatWrong">O arquivo solicitado parece não conter dados suficientes ou está mal formatado. Contate na sua empresa o responsável pela administração do sistema.</string>
    <string name="placeholderLog">Sem logs por enquanto...</string>
    <string name="noLog">Sem logs por enquanto.</string>
    <string name="noClientesTitle">Sem clientes no momento...</string>
    <string name="noClientesText">Refaça sua busca ou realize uma sincronização para que seus clientes possam aparecer aqui.</string>
    <string name="noProdutosTitle">Sem produtos no momento...</string>
    <string name="noProdutosText">Refaça sua busca ou realize uma sincronização para que produtos possam aparecer aqui.</string>
    <string name="networkError">Verifique sua conexão com a internet...</string>
    <string name="networkSuccess">Conexão com a internet OK.</string>
    <string name="nenhumTitulo">Nenhum Título do tipo À Vencer/Vencido encontrado para este cliente. Quando existirem... eles aparecerão aqui.</string>
    <string name="nenhumaVisita">Nenhuma Visita registrada para este cliente. Quando existirem... elas aparecerão aqui.</string>
    <string name="nenhumaCompra">Nenhuma Compra realizada por este cliente nos últimos 6(seis) meses. Quando existirem... elas aparecerão aqui.</string>
    <string name="go_new_login">Este usuário é diferente do último login. Todos os dados serão apagados. Deseja continuar?</string>
    <string name="redefinir">Todos os seus dados serão apagados. Deseja redefinir?</string>
    <string name="go_connecting">Conectando...</string>
    <string name="go_sinc">Sincronizado!</string>
    <string name="go_write_tabela">Gravando dados nas tabelas...</string>
    <string name="go_erro_data">Dados não conferem...</string>
    <string name="go_erro_conn">Erro ao tentar conexão com o servidor...</string>
    <string name="go_erro_cod_inc">Código incompleto, digite novamente!</string>
    <string name="go_erro_no_emp">Não existe Empresa para este código!</string>
    <string name="go_erro_tabela">Erro ao gravar dados nas tabelas...</string>
    <string name="go_erro_file">Arquivo não encontrado...</string>
    <string name="noFirstSinc">Ainda não houve sincronização...</string>
    <string name="sinc_cliente">CLIENTES</string>
    <string name="sinc_cliente_info">CLIENTES, NOVOS, CRÉDITO, ENDEREÇO...</string>
    <string name="sinc_produtos">PRODUTOS</string>
    <string name="sinc_produtos_info">PRODUTOS NOVOS, PREÇO, DESCRIÇÃO...</string>
    <string name="sinc_pedidos">PEDIDOS</string>
    <string name="sinc_pedidos_info">STATUS DOS PEDIDOS EM PROCESSAMENTO.</string>
    <string name="sinc_retorno">RETORNO</string>
    <string name="sinc_retorno_info">RETORNO DAS VENDAS DO VENDEDOR.</string>
    <string name="sinc_titulos">TÍTULOS</string>
    <string name="sinc_titulos_info">TÍTULOS VENCIDOS E A VENCER.</string>
    <string name="sinc_estoque">ESTOQUE</string>
    <string name="sinc_estoque_info">ESTOQUE ATUAL, MÍNIMO E MÁXIMO.</string>
    <string name="sinc_catalogo">CATÁLOGO</string>
    <string name="configSobreTitle">Sobre</string>
    <string name="configSobreDesc">Detalhes, versão e cotatos</string>
    <string name="configAjudaTitle">Ajuda</string>
    <string name="configAjudaDesc">Documentações</string>
    <string name="configNotificacaoTitle">Notificações</string>
    <string name="configNotificacaoDesc">Notificaçoes, mensagens</string>
    <string name="configPersonTitle">Personalizações</string>
    <string name="configPersonDesc">Listas, layouts, exibições, cores</string>
    <string name="configPSegurancaTitle">Segurança</string>
    <string name="configSegurancaDesc">Login, senha</string>
    <string name="prefGeralCategory">Geral</string>
    <string name="listagemCompleta" translatable="false">listagemCompleta</string>
    <string name="prefListagemCompletaNome">Listagem Completa</string>
    <string name="prefListagemCompletaDescription">Listar todos os itens de uma só vez. Requer maior processamento.</string>
    <string name="homeChartaType" translatable="false">homeChartType</string>
    <string name="prefHomeChartaTypeNome">Gráfico - Tela Inicial</string>
    <string name="prefHomeChartaTypeDescription">Tipo de gráfico exibido na tela inicial.</string>
    <string name="prefHomeChartaTypeDefault">Linhas</string>
    <string name="prefClienteCategory">Clientes</string>
    <string name="clienteTipo" translatable="false">clienteTipo</string>
    <string name="prefClienteNome">Modo de Exibição</string>
    <string name="prefClienteDescription">Nome para exibir os clientes listados.</string>
    <string name="prefClienteTipoDefault">Nome Fantasia</string>
    <string name="clienteLista" translatable="false">clienteLista</string>
    <string name="prefClienteListaNome">Detalhe - Lista de Clientes</string>
    <string name="prefClienteListaDescription">Clientes sem compra, títulos em atraso...</string>
    <string name="prefProdutoCategory">Produtos</string>
    <string name="catalogoQtde" translatable="false">catalogoQtde</string>
    <string name="prefProdutoCatalogoNome">Catálogo</string>
    <string name="prefProdutoCatalogoDescription">Quantidade de colunas para exibir no catálogo de produtos.</string>
    <string name="prefProdutoCatalogoDefault">Três Colunas</string>
    <string name="produtoNovoDias" translatable="false">produtoNovoDias</string>
    <string name="prefProdutoNovoNome">Produtos Novos</string>
    <string name="prefProdutoNovoDescription">Quantidade de dias a partir da data de cadastro para que o produto seja destacado como novo.</string>
    <string name="prefProdutoNovoDefault">Não Exibir</string>
</resources>