<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/prefGeralCategory">

        <CheckBoxPreference
            android:summary="@string/prefListagemCompletaDescription"
            android:title="@string/prefListagemCompletaNome"
            android:defaultValue="@bool/prefListagemCompletaDefault"
            android:key="@string/listagemCompleta"/>

        <ListPreference
            android:title="@string/prefHomeChartaTypeNome"
            android:summary="@string/prefHomeChartaTypeDescription"
            android:key="@string/homeChartaType"
            android:defaultValue="@string/prefHomeChartaTypeDefault"
            android:entries="@array/prefHomeChartaTypeOptions"
            android:entryValues="@array/prefHomeChartaTypeValues" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/prefClienteCategory">

        <ListPreference     android:title="@string/prefClienteNome"
            android:summary="@string/prefClienteDescription"
            android:key="@string/clienteTipo"
            android:defaultValue="@string/prefClienteTipoDefault"
            android:entries="@array/prefClienteListOptions"
            android:entryValues="@array/prefClienteListValues" />

        <PreferenceScreen
            android:summary="@string/prefClienteListaDescription"
            android:title="@string/prefClienteListaNome"
            android:key="@string/clienteLista"/>

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/prefProdutoCategory">

        <ListPreference     android:title="@string/prefProdutoCatalogoNome"
            android:summary="@string/prefProdutoCatalogoDescription"
            android:key="@string/catalogoQtde"
            android:defaultValue="@string/prefProdutoCatalogoDefault"
            android:entries="@array/prefProdutoCatalogoOptions"
            android:entryValues="@array/prefProdutoCatalogoValues" />

        <ListPreference     android:title="@string/prefProdutoNovoNome"
            android:summary="@string/prefProdutoNovoDescription"
            android:key="@string/produtoNovoDias"
            android:defaultValue="@string/prefProdutoNovoDefault"
            android:entries="@array/prefProdutoNovoOptions"
            android:entryValues="@array/prefProdutoNovoValues" />

    </PreferenceCategory>


</PreferenceScreen>